gcc/testsuite/g++.dg/parse/using1.C
namespace A { using ::B; } // { dg-error "" }
